# WEB_HW_14

./: README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 18b1a3d69e80_reset_old.py  27495cce91b7_migration2.py  4cff7175fdb0_add_reset_token_to_user.py  4f84b5eb7471_init.py  7431d86c574a_migration.py  83494b65a6a6_add_comfirmed_email.py  8b30586b7333_init.py  9219327b4b7a_fix_schemas.py  9eb91d9eb253_init.py  aad8b063ef43_add_user.py  abfa4fab8941_add_role.py  d98713d25e0f_init.py  e7009f37dd17_fix_roles.py  e7654fda7dff_init.py  e9e07502bc28_init.py  eb096e492fb0_add_user_to_contact.py  f1bc8ea5c8f7_add_updated_time_to_user.py
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16899  16902  16904  16906  16912  16913  16917  16918  16920  16923  16947  16949  16955  16956  (+39 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  search.py
src/routes/: auth.py  contacts.py  search.py  users.py
src/services/: auth.py  email.py  role.py
static/: cover.avif
templates/: index.html
tests/: conftest.py  test_main.py  test_route_auth.py  test_route_contact.py  test_route_search.py  test_unit_repository_contacts.py  test_unit_repository_search.py  test_unit_repository_users.py
