[tool.poetry]
name = "hw-web-14-fastapi_test"
version = "0.1.0"
description = ""
authors = ["dizir7772 <v.a.artemenko1990@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
requests = "^2.28.2"
sqlalchemy = "^2.0.7"
psycopg2 = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.7"}
alembic = "^1.10.2"
jinja2 = "^3.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.2.7"
redis = "^4.5.4"
fastapi-limiter = "^0.1.5"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"
aioredis = "^2.0.1"
cloudinary = "^1.32.0"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
